# HomeHub

./: index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/css/: styles.css
src/js/: app.js
