[package]
name = "homehub"
version = "1.0.0"
description = "HomeHub - Smart Home Dashboard for Raspberry Pi"
authors = ["you"]
edition = "2021"

[lib]
name = "home_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
